# cgin1

./: CMakeLists.txt  README.md
assets/shaders/: motion.comp  motion.comp.spv  motion.frag  motion.frag.spv  motion.vert  motion.vert.spv  sample.frag  sample.frag.spv  sample.vert  sample.vert.spv
source/: AccessSpecifier.h  AssetManager.cpp  AssetManager.h  Behavior.cpp  Behavior.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  ClearPass.cpp  ClearPass.h  ComputePass.cpp  ComputePass.h  CoordinateSystem.h  DrawPass.cpp  DrawPass.h  GeometryContainer.cpp  GeometryContainer.h  Image.cpp  Image.h  InputSupport.cpp  InputSupport.h  Pass.cpp  Pass.h  PassDependencyManager.cpp  PassDependencyManager.h  PipelinePass.cpp  PipelinePass.h  PixelDataContainer.cpp  PixelDataContainer.h  PresentPass.cpp  PresentPass.h  PresentationController.cpp  PresentationController.h  Resource.cpp  Resource.h  ResourceAccessSpecifier.h  Scene.h  Shader.cpp  Shader.h  (+11 more)
